# passion-os

./: .gitignore  ACTION_PLAN_DIRECTORY_REORGANIZATION.md  CHANGELOG.md  COMPREHENSIVE_CODEBASE_VALIDATION_JAN20_2026.md  COMPREHENSIVE_CODE_EXTRACTION.md  COMPREHENSIVE_SESSION_SUMMARY.md  COMPREHENSIVE_STATUS_REPORT_2026_01_17.md  DATABASE_SCHEMA_DESYNC.md  DEBUGGING.md  DEBUGGING_REORGANIZATION_COMPLETE.md  DEBUG_REORGANIZATION_EXECUTIVE_SUMMARY.md  DEBUG_REORGANIZATION_FILE_MANIFEST.md  DEBUG_REORGANIZATION_INDEX.md  DEBUG_REORGANIZATION_QUICK_REFERENCE.md  DEBUG_REORGANIZATION_VISUAL.md  DEBUG_REORGANIZATION_VISUAL_DIAGRAMS.md  DEPLOYMENT_FINAL_REPORT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DIRECTORY_QUICK_REFERENCE.md  DIRECTORY_STRUCTURE_PLAN.md  DIRECTORY_STRUCTURE_VISUAL.md  DOCUMENTATION_INDEX.md  E2E_TEST_SUITES_SUMMARY.md  ENHANCED_STORAGE_SPEC.md  FINAL_DEPLOYMENT_INDEX.md  FINAL_STATUS.md  FINAL_VALIDATION.md  FRONTEND_INFRASTRUCTURE_COMPLETE.md  FRONTEND_SYSTEMS_COMPLETE_GUIDE.md  FRONT_004_DEPLOYMENT_CHECKLIST.md  FRONT_004_FINAL_DELIVERY_SUMMARY.md  FRONT_004_QUICK_REFERENCE.md  MASTER_FEATURE_SPEC.md  MASTER_SESSION_SUMMARY.md  NEW_DEBUG_STRUCTURE_PROPOSAL.md  NEXT_PRIORITIES_ROADMAP.md  NEXT_WORK_OPTIONS_BACK008.md  OAUTH_CALLBACK_ERROR_DEBUGGING_COMPLETE.md  (+31 more)
.github/: copilot-instructions.md
.github/instructions/: CODE_REVIEW_AND_CLEANUP.instructions.md  DEBUGGING.instructions.md  MANDATORY_CONTEXT.instructions.md  c1.instructions.md
.github/workflows/: deploy-admin.yml  deploy-backend.yml  deploy-frontend-worker.yml  deploy-frontend.yml  deploy-production.yml  neon-migrations.yml  release-watcher.yml  trust-boundary-lint.yml
agent/: ADMIN_SYSTEM_VALIDATION.md  AUTH_CROSS_DOMAIN_ANALYSIS.md  PROGRESS.md
app/admin/: package-lock.json
app/backend/: Cargo.toml  Dockerfile  fly.toml
app/backend/crates/api/: Cargo.toml
app/backend/crates/api/src/: config.rs  error.rs  main.rs  state.rs
app/backend/crates/api/src/db/: admin_models.rs  admin_repos.rs  books_models.rs  books_repos.rs  exercise_models.rs  exercise_repos.rs  focus_models.rs  focus_repos.rs  frames_models.rs  frames_repos.rs  gamification_models.rs  gamification_repos.rs  generated.rs  habits_goals_models.rs  habits_goals_repos.rs  inbox_models.rs  inbox_repos.rs  learn_models.rs  learn_repos.rs  market_models.rs  market_repos.rs  mod.rs  oauth_models.rs  oauth_repos.rs  platform_models.rs  platform_repos.rs  quests_models.rs  quests_repos.rs  reference_models.rs  reference_repos.rs  references_repos.rs  repos.rs  template_models.rs  template_repos.rs  vault_models.rs  vault_repos.rs
app/backend/crates/api/src/middleware/: auth.rs
app/backend/crates/api/src/routes/: admin.rs  admin_templates.rs  api.rs  auth.rs  blobs.rs  books.rs  calendar.rs  daily_plan.rs  daw_projects.rs  exercise.rs  feedback.rs  focus.rs  frames.rs  gamification.rs  goals.rs  habits.rs  ideas.rs  inbox.rs  infobase.rs  learn.rs  market.rs  mod.rs  onboarding.rs  quests.rs  reference.rs  references_library.rs  settings.rs  sync.rs  today.rs  user.rs  vault.rs  vault_recovery.rs
app/backend/crates/api/src/services/: recovery_validator.rs
app/backend/crates/api/src/shared/: audit.rs  ids.rs  mod.rs
app/backend/crates/api/src/shared/auth/: csrf.rs  extractor.rs  mod.rs  origin.rs  rbac.rs
app/backend/crates/api/src/shared/db/: mod.rs  pagination.rs  tx.rs
app/backend/crates/api/src/shared/http/: errors.rs  mod.rs  response.rs  validation.rs
app/backend/crates/api/src/storage/: client.rs
app/backend/crates/api/src/tests/: focus_tests.rs  frames_tests.rs  gamification_tests.rs  goals_tests.rs  habits_tests.rs  mod.rs  quests_tests.rs  reference_golden_tests.rs  reference_tests.rs  template_tests.rs
app/backend/crates/api/tests/: accounts_type_column_test.rs
app/backend/migrations/: 0001_auth.sql  0001_schema.sql  0002_seeds.sql  0004_focus.sql  0015_add_missing_accounts_type_column.sql  0015_oauth_state.down.sql  0015_oauth_state.sql  0016_fix_accounts_type_column.sql  20240115000000_add_user_admin_flag.sql
app/frontend/: Dockerfile  next.config.ts  open-next.config.ts  package-lock.json  package.json  wrangler.toml
app/watcher/: Cargo.toml  build-dist.js  create_icons.sh  create_valid_icons.sh  package-lock.json  package.json  tauri.conf.json
app/watcher/src/: api.rs  crypto.rs  file_watcher.rs  main.rs  models.rs  packager.rs
app/watcher/src-frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
app/watcher/src-frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  progress.tsx  select.tsx  switch.tsx
app/watcher/src/services/: state_manager.rs
app/watcher/src/ui/: commands.rs  mod.rs
debug/: ACTION_PLANS.md  COMPREHENSIVE_SCHEMA_VALIDATION.md  DEBUGGING.md  FOLDER_STRUCTURE.md  HOTFIX_DUPLICATE_VALUE_2026_01_11.md  IMPLEMENTATION_RESULTS_2026_01_11.md  OAUTH_CALLBACK_ERROR_ANALYSIS.md  OPTIMIZATION_TRACKER.md  README.md  SOLUTION_SELECTION.md  VALIDATION_RESULTS.md
debug/archive/: DEBUGGING_P0_PRODUCTION_ERRORS.md  E2E_TEST_FAILURES.md  PHASE_3_HABITS_FIX.md  (+17 more)
deploy/: README.md  docker-compose.e2e.yml  docker-compose.infra.yml  rollback.md  routing.md
docs/: FEATURES.md  GITHUB_ACTIONS_SETUP.md  RELEASE_STRATEGY.md  VERSIONING.md  _index.md
infra/: .env.example
scripts/: .git_commit.sh  commit-pitfall-fixes.sh  generate_schema.sh  release.js
tests/: features-focus-sessions.spec.ts  features-goals.spec.ts  features-habits.spec.ts  features-learning.spec.ts  features-quests.spec.ts
(+919 files in other folders)
