[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ignition/ignition"

[workspace.dependencies]
# Web framework (minimal features)
axum = { version = "0.8", default-features = false, features = ["http1", "json", "matched-path", "query", "tokio", "tower-log", "tracing", "macros", "multipart"] }
axum-extra = { version = "0.10", default-features = false, features = ["typed-header"] }
tower = { version = "0.5", default-features = false, features = ["timeout", "limit", "util"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace", "request-id", "propagate-header"] }

# Async runtime (minimal features)
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "net", "time", "sync", "signal", "macros"] }

# Database (minimal features, no sqlite)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "derive", "migrate", "macros"] }

# S3/R2 storage - lightweight alternative (10x faster compile than aws-sdk)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }

# HTTP client (minimal features)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# OAuth
oauth2 = "4.4"
url = "2.5"

# Crypto (minimal)
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
base64 = "0.22"
sha2 = { version = "0.10", default-features = false, features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", default-features = false, features = ["v4", "serde", "std"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "json", "fmt", "ansi"] }
dotenvy = "0.15"

# Config
config = { version = "0.14", default-features = false, features = ["toml"] }

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = 1

[profile.dev.package."*"]
opt-level = 2

