[package]
name = "daw-watcher"
version = "0.1.0"
description = "DAW file watcher and uploader with automatic encryption"
authors = ["Passion OS"]
license = "MIT"
repository = "https://github.com/passionateos/passion-os-next"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "os-all", "fs-exists", "window-unmaximize", "window-show", "window-minimize", "window-maximize", "window-hide", "fs-read-dir", "notification-all", "fs-read-file", "window-close", "path-all", "shell-open", "system-tray"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# File watching
notify = "6.1"
walkdir = "2.4"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_Com",
] }

[features]
# This feature is used for production builds where `devPath` points to the filesystem
# and CORS is only enabled on windows/macos desktop app.
# `insecure-localhost` feature is not enabled as we do not want the localhost dev server to be reachable externally.
default = ["custom-protocol"]
# this feature is used used for development builds where `devPath` points to a dev server. CORS is enabled on windows/macos desktop app.
dev = []
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "daw-watcher"
path = "src/main.rs"
