[package]
name = "ignition-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ignition-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async runtime
tokio.workspace = true

# Database
sqlx.workspace = true

# S3/R2 storage (lightweight)
rust-s3.workspace = true

# HTTP client
reqwest.workspace = true

# OAuth
oauth2.workspace = true
url.workspace = true

# Crypto
rand.workspace = true
base64.workspace = true
sha2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

# Macros
paste = "1"

# Config
config.workspace = true

[dev-dependencies]
axum-test = "16"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }

